found overflow issue on mobile, fixed

--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -1,6 +1,7 @@
 footer {
     background-color: $darker-green;
-    padding: .5em;
+    padding-top: .5em;
+    padding-bottom: .5em;
 }
 
 .footer-container p {
